--- a/TMessagesProj/src/main/res/layout/select_city_header.xml
+++ b/TMessagesProj/src/main/res/layout/select_city_header.xml
@@ -1,10 +1,10 @@
+<?xml version="1.0" encoding="utf-8"?>
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
-          android:id="@android:id/text1"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
-          android:textAppearance="?attr/textAppearanceListItemSmall"
           android:gravity="center_vertical"
-          android:textColor="@color/techrunch_selected_city_color"
+          android:textColor="@android:color/darker_gray"
+          android:textSize="15sp"
           android:paddingLeft="@dimen/techranch_listPreferredItemPadding"
           android:paddingRight="@dimen/techranch_listPreferredItemPadding"
-          android:minHeight="?attr/listPreferredItemHeightSmall" />
+          android:text="@string/techranch_cities"/>
