--- a/TMessagesProj/src/main/res/layout/select_city_item_layout.xml
+++ b/TMessagesProj/src/main/res/layout/select_city_item_layout.xml
@@ -1,10 +1,29 @@
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-          android:id="@android:id/text1"
-          android:layout_width="match_parent"
-          android:layout_height="wrap_content"
-          android:textAppearance="?attr/textAppearanceListItemSmall"
-          android:gravity="center_vertical"
-          android:textColor="@color/techrunch_selected_city_color"
-          android:paddingLeft="@dimen/techranch_listPreferredItemPadding"
-          android:paddingRight="@dimen/techranch_listPreferredItemPadding"
-          android:minHeight="?attr/listPreferredItemHeightSmall" />
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:minHeight="?attr/listPreferredItemHeightSmall"
+    android:paddingLeft="@dimen/techranch_listPreferredItemPadding"
+    android:paddingRight="@dimen/techranch_listPreferredItemPadding">
+
+    <TextView
+        android:id="@+id/city_field"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:layout_gravity="center_vertical"
+        android:text="test"
+        android:textAppearance="?attr/textAppearanceListItemSmall"
+        android:textColor="@color/techrunch_selected_city_color"/>
+
+    <ImageView
+        android:id="@+id/ic_near_me"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical"
+        android:paddingRight="10dp"
+        android:src="@drawable/ic_near_me"/>
+
+</LinearLayout>
+
