--- a/TMessagesProj/src/main/res/layout/activity_choose_town.xml
+++ b/TMessagesProj/src/main/res/layout/activity_choose_town.xml
@@ -16,7 +16,7 @@
         <FrameLayout
             android:id="@+id/toolbar_place"
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"/>
+            android:layout_height="wrap_content"/>
 
         <LinearLayout
             android:layout_width="match_parent"
