--- a/TMessagesProj/src/main/res/values/colors.xml
+++ b/TMessagesProj/src/main/res/values/colors.xml
@@ -2,4 +2,10 @@
 <resources>
     <color name="divider">#dcdcdc</color>
     <color name="techrunch_primary_color">#ff527da3</color>
+
+
+    <color name="techranch_selected">#ffff4444</color>
+    <color name="techranch_unselected">#000000</color>
+
+
 </resources>
