--- a/TMessagesProj/src/main/res/values/dimens.xml
+++ b/TMessagesProj/src/main/res/values/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="techranch_listPreferredItemPadding">10dip</dimen>
+    <dimen name="techranch_selected_city_text_cize">8sp</dimen>
 </resources>
